<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/key_fragment_background"
    tools:context=".dashboard.retailerModule.key.fragments.UdharFragment">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:fadingEdgeLength="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:drawablePadding="15dp"
        android:text="@string/udhar"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        app:drawableTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/question_mark"
        android:src="@drawable/question_blue_img"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:elevation="12dp"
        android:padding="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/how_much_money_do_you_want_to_collect"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/totalAmountEdt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="Name"
                android:background="@drawable/text_key_radius_grey"
                android:hint="@string/total_amount"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/who_do_you_want_to_collect_it_from"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobileNumEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="Name"
                android:background="@drawable/text_key_radius_grey"
                android:hint="@string/customer_mobile_number"
                android:inputType="textCapCharacters"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/custNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="Name"
                android:background="@drawable/text_key_radius_grey"
                android:hint="@string/customer_name"
                android:inputType="textCapWords"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/what_is_this_collection_for"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/billDetailsEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="Name"
                android:background="@drawable/text_key_radius_grey"
                android:hint="@string/bill_details_item_name_bill_no_etc"
                android:inputType="textCapCharacters"
                android:maxLength="10"
                android:maxLines="1"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="10dp"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:padding="15dp"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>