<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/key_fragment_background"
    tools:context=".dashboard.retailerModule.key.fragments.AddCustomer3Fragment">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:fadingEdgeLength="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:drawablePadding="15dp"
        android:text="@string/add_customer"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        app:drawableTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/question_mark"
        android:src="@drawable/question_blue_img"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:padding="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/keyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smartkey"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/keyName"
                        android:text="@string/mobile_frp_protection"
                        android:textColor="@color/create_user_grey"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <ImageView
                        android:id="@+id/editImageView"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/edit_button"
                        android:src="@drawable/edit_blue" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:padding="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/loan_details"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/priceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:autofillHints="Name"
                        android:background="@drawable/text_key_radius_grey"
                        android:hint="@string/product_price"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingHorizontal="10dp"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/downPaymentEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:autofillHints="Name"
                        android:background="@drawable/text_key_radius_grey"
                        android:hint="@string/down_payment"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingHorizontal="10dp"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/loanAmounttEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:autofillHints="Name"
                        android:background="@drawable/text_key_radius_grey"
                        android:hint="@string/loan_amount"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingHorizontal="10dp"
                        android:textSize="14sp" />
                    
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/how_do_you_want_to_collect_this_amount"/>
                    
                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        
                        <RadioButton
                            android:id="@+id/radioColletEmi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/collect_in_emi"
                            android:textStyle="bold"/>
                        <RadioButton
                            android:id="@+id/oneTimeRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/one_time_payment"
                            android:textStyle="bold"/>
                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        android:text="@string/frequency_of_collection"/>

                    <Spinner
                        android:id="@+id/installmentFreqBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/scan_blue_background"
                        android:drawableStart="@drawable/retry_black"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:text="@string/how_many_installments"/>

                    <EditText
                        android:id="@+id/numberOfInstallments"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/scan_blue_background"
                        android:drawableStart="@drawable/baseline_account_balance_wallet_24"
                        android:gravity="start|center"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:hint="@string/number_of_installments"
                        android:textColorHint="@color/purple_700"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:textColor="@color/purple_700"
                        android:drawableTint="@color/purple_700"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:text="@string/when_do_you_want_to_start_collection"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/datepicker"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/scan_blue_background"
                        android:drawableStart="@drawable/calendar_month_icon"
                        android:gravity="start|center"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/collection_start_date"
                        android:drawablePadding="10dp"
                        android:textColor="@color/purple_700"
                        android:layout_marginBottom="10dp"
                        android:drawableTint="@color/purple_700"/>
                    
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/skipButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/scan_blue_background"
                    android:text="@string/skip"
                    android:textColor="@color/purple_700"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/purple_700"
                    android:textColor="@color/white"
                    android:text="@string/next"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>