<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/img"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toTopOf="@+id/imageViewProfile">

        <TextView
            android:visibility="invisible"
            android:id="@+id/userCompanyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="50dp"
            android:text="Jain Communication"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
            app:drawableTint="#C1B9B9" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/userPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_022_69646511"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plusMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/crown_white"
        android:drawableTint="#FF9800"
        android:drawablePadding="20dp"
        android:paddingHorizontal="60dp"
        android:text="@string/plus_member"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        android:textSize="13sp"
        app:iconTint="#FF9800"
        android:textColor="#FF9800"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>